# framework.abstraction

./: .gitignore  .gitmodules  LICENSE  README.md  esp-env.sh  library.json  setenv.sh
src/fabs/: fabs_systime.cpp  systime.h
src/fabs/mbed/: systime.h
src/frab/: frab.h  gpio.h  i2c.h  platform.h  spi.h  spi_context.h  systime.h  thread.h  uart.h
src/frab/arduino/: spi.hpp  systime.h  thread.h
src/frab/atmel/asf/: gpio.h  spi.h
src/frab/atmel/asf/fallback/: README.md
src/frab/avr/: gpio.h  spi-slave.h  spi-slave.hpp  spi.h
src/frab/base/: README.md  gpio.h  spi.h
src/frab/cmsis/: spi.h
src/frab/esp-idf/: gpio.h  i2c.h  spi.h
src/frab/esp-open-rtos/: gpio.h  i2c.h  spi.h  systime.h
src/frab/esp8266-rtos-sdk/: gpio.h  peri.h  spi-raw.h  spi.h
src/frab/mbed/: gpio.h  i2c.h  spi.hpp  systime.h  thread.h
src/frab/mongoose-os/: gpio.h
src/frab/posix/: systime.h
src/frab/shim/: i2c.h
test/esp-open-rtos/blink/: Makefile  main.cpp
test/esp-open-rtos/i2c/: Makefile
test/mbed/: .gitignore  build.sh  flash-st.sh  main.cpp  profiles
test/mbed/i2c/: main.cpp  profiles
test/pio/spi-slave/: platformio.ini
test/pio/spi-slave/src/: main.cpp
test/posix/: CMakeLists.txt  main.cpp
test/posix/basic/: CMakeLists.txt
test/posix/unit-tests/: CMakeLists.txt  main.cpp  placement_helper.cpp
test/rtos/esp32/gpio/: Makefile
test/rtos/esp32/gpio/main/: Kconfig.projbuild  component.mk  gpio-test.cpp  stub.cpp
test/rtos/esp32/spi/: Makefile
test/rtos/esp32/spi/main/: stub.cpp
test/rtos/esp32/template/: user_main.c
test/rtos/esp8266/gpio/: Makefile
test/rtos/esp8266/gpio/main/: Kconfig.projbuild  gpio-test.cpp  stub.cpp
test/rtos/esp8266/spi/: Makefile  components
test/rtos/esp8266/spi/main/: spi-test.cpp  stub.cpp
test/rtos/esp8266/template/: user_main.c
test/rtos/template/: freertos_main.c  version_finder.mk
test/rtos/template/components/: component.mk  estdlib
